After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736426 - mpegpsmux: memory leak with h264/avc stream
mpegpsmux: memory leak with h264/avc stream
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Windows
: Normal normal
: 1.4.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-10 16:00 UTC by Semen Belozorov
Modified: 2014-09-11 18:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leak in mpegpsmux (527 bytes, patch)
2014-09-11 08:52 UTC, Semen Belozorov
needs-work Details | Review
Fix memory leak in mpegpsmux (format-patch) (901 bytes, patch)
2014-09-11 13:05 UTC, Semen Belozorov
committed Details | Review

Description Semen Belozorov 2014-09-10 16:00:26 UTC
Hi!
Memory leak occures, if input h264 stream have stream-format=avc.
To detect this problem can be used next pipeline:

videotestsrc ! x264enc ! mpegpsmux ! filesink location="new.ps"
Comment 1 Semen Belozorov 2014-09-11 08:52:10 UTC
Created attachment 285889 [details] [review]
Fix memory leak in mpegpsmux
Comment 2 Semen Belozorov 2014-09-11 08:55:14 UTC
To fix memory leak need unmap "map" variable in file mpegpsmux_h264.c in function  mpegpsmux_prepare_h264. Please check and commit to master.
Comment 3 Tim-Philipp Müller 2014-09-11 10:02:24 UTC
Comment on attachment 285889 [details] [review]
Fix memory leak in mpegpsmux

Thanks for the patch, could you please provide it in git format-patch format with full name and commit message? Thanks!
Comment 4 Semen Belozorov 2014-09-11 13:05:33 UTC
Created attachment 285904 [details] [review]
 Fix memory leak in mpegpsmux (format-patch)

Thanks for your reply!
I'm sorry, this is my first patch. Now everything is fine?
Comment 5 Tim-Philipp Müller 2014-09-11 13:33:16 UTC
Yes, perfect, many thanks. Pushed to master, will probably pick into 1.4 as well:

commit 00d0ff6c8e5546895cc94fb5c61e90f206a8e444
Author: Belozorov Semen <skiminokD@gmail.com>
Date:   Thu Sep 11 16:21:30 2014 +0400

    mpegpsmux: fix memory leak when converting H.264 avc to byte-stream format
    
    Fix memory leak for input stream with caps "video/x-h264,stream-format=avc".
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736426