mpegpsmux: fix memory leak when converting H.264 avc to byte-stream format

Fix memory leak for input stream with caps "video/x-h264,stream-format=avc".

https://bugzilla.gnome.org/show_bug.cgi?id=736426